--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -1,5 +1,7 @@
 // src/components/Footer.scss
 .footer {
-    padding: 1rem 0;
-  }
-  
+  padding: 1rem 0;
+  background-color: #343a40; /* Ensure it matches the rest of the site's theme */
+  color: white;
+  margin-top: auto;
+}
