--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -1,8 +1,6 @@
 // src/components/About.scss
 .about {
   padding: 1rem 0;
-  
-  //background-color: #f8f9fa;
 }
 
 .about-title {
@@ -20,20 +18,51 @@
   margin-bottom: 1rem;
 }
 
-.about-services {
-  list-style-type: none;
-  padding: 0;
+.about-team-title {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #005f73;
+  text-align: center;
+  margin-top: 2rem;
   margin-bottom: 2rem;
 }
 
-.about-services li {
-  background-color: #e9ecef;
-  padding: 0.5rem 1rem;
-  margin-bottom: 0.5rem;
-  border-radius: 0.25rem;
-  transition: background-color 0.3s ease;
+.about-team {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.about-services li:hover {
-  background-color: #ced4da;
+.team-member {
+  margin-bottom: 2rem;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.team-photo {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin: 0 auto;
+}
+
+.card {
+  border: none;
+  text-align: center;
+  padding: 1rem;
+}
+
+.card-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #005f73;
+  margin-top: 1rem;
+}
+
+.card-text {
+  font-size: 1rem;
+  color: #343a40;
 }
