--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -62,6 +62,10 @@ html {
   font-size: 1.25rem;
   padding: 0.5rem 1.5rem;
   transition: background-color 0.3s ease-in-out;
+  display: inline-block; 
+  width: auto;
+  max-width: fit-content;
+  white-space: nowrap;
 }
 
 .hero-text button:hover {
